# TestPoems

./: README.md
TestPoems/: pyproject.toml
TestPoems/src/testpoems/: cli.py  poems.py
TestPoems/tests/: test_poems.py
